# ollama-models-db

./: .envrc  .gitignore  AGENTS.md  README.md  flake.nix  pyproject.toml
nix/: devshell.nix  module.nix  package.nix
src/ollama_models_db/: cli.py  db.py  models.py  scraper.py
