[project]
name = "ollama-models-db"
version = "0.1.0"
description = "SQLite database of available Ollama models from ollama.com/search"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "click>=8.1",
]

[project.scripts]
ollama-models-db = "ollama_models_db.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
